# iwf_api

./: CHANGELOG.md  LICENSE  README.md  example.py  requirement.txt  result_test.ipynb  scatchwork.ipynb  setup.cfg  test.ipynb
.github/workflows/: python-package.yml
iwf/: __init__.py  athlete.py  core.py  event.py  helper.py  helpers.py  result.py
