[metadata]
name = iwf-api-jwc20
version = 0.0.2
author = Jae W. Choi
description = Library to fetch and parse from iwf.sport
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
beautifulsoup4==4.11.1
certifi==2022.5.18.1
charset-normalizer==2.0.12
idna==3.3
lxml==4.9.0
requests==2.27.1
soupsieve==2.3.2.post1
urllib3==1.26.9

